<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InsertRenewableSources">

  <EditText
      android:id="@+id/rnSourceName"
      android:layout_width="250dp"
      android:layout_height="60dp"
      android:layout_marginStart="101dp"
      android:layout_marginTop="48dp"
      android:layout_marginEnd="101dp"
      android:ems="10"
      android:hint="@string/enterSource"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.268"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/btnRnSaveData"
      android:layout_width="147dp"
      android:layout_height="54dp"
      android:layout_marginStart="160dp"
      android:layout_marginEnd="135dp"
      android:layout_marginBottom="268dp"
      android:text="@string/saveSourceData"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/rnSourceContent"
      android:layout_width="250dp"
      android:layout_height="60dp"
      android:layout_marginStart="102dp"
      android:layout_marginTop="48dp"
      android:layout_marginEnd="100dp"
      android:ems="10"
      android:hint="@string/enterContent"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.292"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/rnSourceName" />

  <EditText
      android:id="@+id/rnSourceRating"
      android:layout_width="250dp"
      android:layout_height="60dp"
      android:layout_marginStart="88dp"
      android:layout_marginTop="46dp"
      android:layout_marginEnd="73dp"
      android:ems="10"
      android:hint="@string/enterRating"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/rnSourceContent" />

</androidx.constraintlayout.widget.ConstraintLayout>